// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`unexpected-reaction DOMElement to exhaustivily satisfy fails with a diff 1`] = `
"expected
<div data-test-id=\\"hello\\">
  <div class=\\"label\\">Hello:</div>
  <div class=\\"value\\" data-test=\\"value\\">Jane Doe</div>
</div>
to exhaustively satisfy
<div>
  <div class=\\"label\\">Hello:</div>
  <div class=\\"value\\" data-test=\\"value\\">Jane Doe</div>
</div>

<div
  data-test-id=\\"hello\\" // should be removed
><div class=\\"label\\">Hello:</div><div class=\\"value\\" data-test=\\"value\\">Jane Doe</div></div>"
`;

exports[`unexpected-reaction DOMElement to satisfy fails with a diff 1`] = `
"expected
<div>
  <div class=\\"label\\">Hello:</div>
  <div class=\\"value\\" data-test=\\"value\\">Jane Doe</div>
</div>
to satisfy <div><div class=\\"label\\">Hello:</div><div>Jane Doe!</div></div>

<div>
  <div class=\\"label\\">Hello:</div>
  <div class=\\"value\\" data-test=\\"value\\">
    Jane Doe // should equal 'Jane Doe!'
             //
             // -Jane Doe
             // +Jane Doe!
  </div>
</div>"
`;

exports[`unexpected-reaction DOMElement with event fails if it cant find the event target 1`] = `
"expected <div><span style=\\"color: red\\">FALSE</span></div>
with event { type: 'click', target: '.foobar' } to have text 'TRUE'
  expected DOMElement to contain elements matching '.foobar'"
`;

exports[`unexpected-reaction DOMElement with event fails if the event type is not known 1`] = `
"expected <div><span style=\\"color: red\\">FALSE</span></div>
with event 'press' to have text 'TRUE'
  Event 'press' is not supported by Simulate
  See https://reactjs.org/docs/events.html#supported-events"
`;
